--- a/.github/workflows/deployment-template.yml
+++ b/.github/workflows/deployment-template.yml
@@ -140,10 +140,10 @@ jobs:
             helm repo update
             helm search repo opensearch
             kubectl get nodes
-            helm uninstall opensearch --namespace default
+            # helm uninstall opensearch --namespace default
             helm uninstall dashboards --namespace default
-            kubectl get pvc | grep opensearch-cluster-leader-opensearch-cluster-leader- | awk '{print $1}'| xargs kubectl delete pvc
-            helm install opensearch opensearch/opensearch -f config/playground/helm/${{inputs.deploy-env}}/helm-opensearch.yaml
+            # kubectl get pvc | grep opensearch-cluster-leader-opensearch-cluster-leader- | awk '{print $1}'| xargs kubectl delete pvc
+            # helm install opensearch opensearch/opensearch -f config/playground/helm/${{inputs.deploy-env}}/helm-opensearch.yaml
             helm install dashboards opensearch/opensearch-dashboards -f config/playground/helm/${{inputs.deploy-env}}/helm-opensearch-dashboards.yaml
 
       - name: Step 9 - Deploy OpenSearch/OpenSearch Dashboards/ML By Helm Chart
