Update test case
Signed-off-by: Tao Liu <liutaoaz@amazon.com>

--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -84,8 +84,8 @@ jobs:
         with:
           endpoint: https://playground.opensearch.oss.aws.dev
         secrets:
-          osd-user: ${{ secrets.OSD_USER }}
-          osd-user-password: ${{ secrets.OSD_USER_PASSWORD }}
+          osd-user: ${{ secrets.OSD_USER_DEV }}
+          osd-user-password: ${{ secrets.OSD_USER_PASSWORD_DEV }}
 
   OSD-Functional-Test-Prod:
         needs: OS-OSD-Prod-Deployment
