disable mutiple datasource
Signed-off-by: Tao Liu <liutaoaz@amazon.com>

--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -93,8 +93,8 @@ jobs:
         with:
           endpoint: https://playground.opensearch.org
         secrets:
-          osd-user: ${{ secrets.OSD_USER }}
-          osd-user-password: ${{ secrets.OSD_USER_PASSWORD }}
+          osd-user: ${{ secrets.OSD_USER_PROD }}
+          osd-user-password: ${{ secrets.OSD_USER_PASSWORD_PROD }}
 
   OSD-Functional-Test-ML:
         needs: OS-OSD-ML-Deployment
