disable multiple datasource
Signed-off-by: Tao Liu <liutaoaz@amazon.com>

--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -102,5 +102,5 @@ jobs:
         with:
           endpoint: https://ml.playground.opensearch.org
         secrets:
-          osd-user: ${{ secrets.OSD_USER }}
-          osd-user-password: ${{ secrets.OSD_USER_PASSWORD }}
+          osd-user: ${{ secrets.OSD_USER_ML }}
+          osd-user-password: ${{ secrets.OSD_USER_PASSWORD_ML }}
