--- a/config/playground/helm/ml/helm-opensearch.yaml
+++ b/config/playground/helm/ml/helm-opensearch.yaml
@@ -687,8 +687,10 @@ securityConfig:
             - cluster:admin/opendistro/ism/managedindex/explain
             - cluster:admin/opendistro/rollup/search
             - cluster:admin/opendistro/transform/get_transforms
-            # To enable read access ml profile
+            # To enable train, predict and read access ml profile
             - cluster:admin/opensearch/ml/profile/nodes
+            - cluster:admin/opensearch/ml/train
+            - cluster:admin/opensearch/ml/predict
             # To enable read access to various ISM Jobs
             - cluster:admin/opendistro/rollup/explain
             - cluster:admin/opendistro/ism/policy/get
@@ -995,6 +997,8 @@ lifecycle: {}
 
 keystore:
   - secretName: opensearch-dashboards-ob
+  - secretName: os-snapshot-access
+  - secretName: os-snapshot-secret
 
 networkPolicy:
   ## Enable creation of NetworkPolicy resources. Only Ingress traffic is filtered for now.
@@ -1015,5 +1019,5 @@ sysctl:
 
 ## Enable to add 3rd Party / Custom plugins not offered in the default OpenSearch image.
 plugins:
-  enabled: false
-  installList: []
+  enabled: true
+  installList: [repository-s3]
