test config change
Signed-off-by: Lu Yu <nluyu@amazon.com>

--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -4,7 +4,7 @@ name: Deploy OpenSearch and OpenSearch Dashboards
 
 on:
   push:
-    branches: [ main ]
+    branches: [ changeconfig ]
   # adds workflow_dispatch for manually running a workflow
   workflow_dispatch:
 
