--- a/config/playground/helm/dev/helm-opensearch.yaml
+++ b/config/playground/helm/dev/helm-opensearch.yaml
@@ -223,9 +223,9 @@ securityConfig:
             # Set filtered_alias_mode to 'nowarn' to allow more than 2 filtered aliases per index silently
             #filtered_alias_mode: warn
             #do_not_fail_on_forbidden: false
-            #kibana:
-            # Kibana multitenancy
-            #multitenancy_enabled: true
+            kibana:
+              # Kibana multitenancy
+              multitenancy_enabled: true
             #server_username: kibanaserver
             #index: '.kibana'
             http:
