change to false
Signed-off-by: Lu Yu <nluyu@amazon.com>

--- a/config/playground/helm/dev/helm-opensearch.yaml
+++ b/config/playground/helm/dev/helm-opensearch.yaml
@@ -225,7 +225,7 @@ securityConfig:
             #do_not_fail_on_forbidden: false
             kibana:
               # Kibana multitenancy
-              multitenancy_enabled: true
+              multitenancy_enabled: false
             #server_username: kibanaserver
             #index: '.kibana'
             http:
