--- a/config/playground/helm/prod/helm-opensearch.yaml
+++ b/config/playground/helm/prod/helm-opensearch.yaml
@@ -224,9 +224,9 @@ securityConfig:
             # Set filtered_alias_mode to 'nowarn' to allow more than 2 filtered aliases per index silently
             #filtered_alias_mode: warn
             #do_not_fail_on_forbidden: false
-            #kibana:
+            kibana:
             # Kibana multitenancy
-            #multitenancy_enabled: true
+              multitenancy_enabled: false
             #server_username: kibanaserver
             #index: '.kibana'
             http:
