--- a/config/playground/helm/searchapps/helm-opensearch.yaml
+++ b/config/playground/helm/searchapps/helm-opensearch.yaml
@@ -96,9 +96,9 @@ secretMounts: []
 hostAliases: []
 
 image:
-  repository: "opensearchproject/opensearch"
+  repository: "opensearchstaging/opensearch"
   # override image tag, which is .Chart.AppVersion by default
-  tag: "latest"
+  tag: "3.0.0"
   pullPolicy: "Always"
 
 podAnnotations: {}
