--- a/config/playground/helm/searchapps/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/searchapps/helm-opensearch-dashboards.yaml
@@ -122,9 +122,9 @@ config:
     opensearch_security.openid.logout_url: ${OPENID_LOGOUT_URL}
 
     # Content security policy(csp) settings
-    csp.rules: ["connect-src 'self' www.google-analytics.com vectors.maps.opensearch.org tiles.maps.opensearch.org maps.opensearch.org;"]
-    csp.warnLegacyBrowsers: false
-    google_analytics_plugin.trackingID: ${GA_TRACKING_ID}
+    # csp.rules: ["connect-src 'self' www.google-analytics.com vectors.maps.opensearch.org tiles.maps.opensearch.org maps.opensearch.org;"]
+    # csp.warnLegacyBrowsers: false
+    # google_analytics_plugin.trackingID: ${GA_TRACKING_ID}
 
 priorityClassName: ""
 
@@ -195,5 +195,5 @@ extraObjects: []
 
 # specify the plugin to install
 plugins:
-  enabled: true
+  enabled: false
   installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.7.0/googleAnalytics-2.7.0.zip"]
