--- a/config/playground/helm/ml/helm-opensearch.yaml
+++ b/config/playground/helm/ml/helm-opensearch.yaml
@@ -97,9 +97,10 @@ hostAliases: []
 
 image:
   repository: "opensearchproject/opensearch"
-# override image tag, which is .Chart.AppVersion by default
-imageTag: ""
-imagePullPolicy: "IfNotPresent"
+  # override image tag, which is .Chart.AppVersion by default
+  tag: ""
+  # Always/Never/IfNotPresent
+  pullPolicy: "Always"
 
 podAnnotations: {}
 
