--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -3,7 +3,7 @@
 
 # Default values for opensearch-dashboards.
 # This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+# Declare variables to be passed into your templates
 
 opensearchHosts: "https://opensearch-cluster-leader:9200"
 replicaCount: 2
