test 2.9 in dev
Signed-off-by: Tao Liu <liutaoaz@amazon.com>

--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -11,7 +11,7 @@ replicaCount: 2
 image:
   repository: "opensearchproject/opensearch-dashboards"
   # override image tag, which is .Chart.AppVersion by default
-  tag: ""
+  tag: "2.9.0"
   # Always/Never/IfNotPresent
   pullPolicy: "Always"
 
