--- a/config/playground/helm/dev/helm-machinelearning.yaml
+++ b/config/playground/helm/dev/helm-machinelearning.yaml
@@ -95,7 +95,7 @@ hostAliases: []
 image:
   repository: "opensearchproject/opensearch"
   # override image tag, which is .Chart.AppVersion by default
-  tag: ""
+  tag: "2.9.0"
   # Always/Never/IfNotPresent
   pullPolicy: "Always"
 
