--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -46,6 +46,7 @@ jobs:
       kube-config: ${{ secrets.KUBE_CONFIG_DATA_DEV }}
       ga-tracking-id: ${{ secrets.GA_TRACKING_ID }}
       kibanaserver: ${{ secrets.KIBANASERVER }}
+      query_datasources_master_key: ${{ secrets.QUERY_DATASOURCES_MASTER_KEY }}
 
   OS-OSD-Prod-Deployment:
     needs: Pre-Deployment
