--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -177,7 +177,7 @@ affinity: {}
 # -- Array of extra K8s manifests to deploy
 extraObjects: []
 
-# specify the external plugins to install
+# specify the external plugins to install.
 plugins:
   enabled: true
-  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.9.0/googleAnalytics-2.9.0.zip"]
+  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.10.0/googleAnalytics-2.10.0.zip"]
