update system indices
Signed-off-by: Flyingliuhub <33105471+flyingliuhub@users.noreply.github.com>

--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -78,6 +78,10 @@ config:
     # Use the consolidated menu and global header bar
     opensearchDashboards.branding.useExpandedHeader: false
 
+    uiSettings:
+      overrides:
+        "theme:next": true
+
     data_source.enabled: true
     data_source.endpointDeniedIPs: [
         '127.0.0.0/8',
