--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -81,6 +81,7 @@ config:
     uiSettings:
       overrides:
         "theme:next": true
+        "theme:darkMode": true
 
     data_source.enabled: true
     data_source.endpointDeniedIPs: [
