update system indices
Signed-off-by: Flyingliuhub <33105471+flyingliuhub@users.noreply.github.com>

--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -4,7 +4,7 @@ name: Deploy OpenSearch and OpenSearch Dashboards
 
 on:
   push:
-    branches: [ release-210-patch ]
+    branches: [ main ]
   # adds workflow_dispatch for manually running a workflow
   workflow_dispatch:
 
@@ -23,7 +23,6 @@ jobs:
       - uses: dorny/paths-filter@v2
         id: filter
         with:
-          base: release-210-patch
           # creates filters to check if any dev or prod changes
           filters: |
             dev:
