--- a/config/playground/helm/preview/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/preview/helm-opensearch-dashboards.yaml
@@ -121,6 +121,11 @@ config:
     opensearch_security.openid.client_secret: ${OPENID_CLIENT_SECRET}
     opensearch_security.openid.logout_url: ${OPENID_LOGOUT_URL}
 
+    uiSettings:
+      overrides:
+        "theme:next": true
+        "theme:darkMode": true
+
     # Content security policy(csp) settings
     csp.rules: [ "connect-src 'self' www.google-analytics.com vectors.maps.opensearch.org tiles.maps.opensearch.org maps.opensearch.org;" ]
     csp.warnLegacyBrowsers: false
