--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -78,6 +78,11 @@ config:
     # Use the consolidated menu and global header bar
     opensearchDashboards.branding.useExpandedHeader: false
 
+    uiSettings:
+      overrides:
+        "theme:next": true
+        "theme:darkMode": true
+
     data_source.enabled: true
     data_source.endpointDeniedIPs: [
         '127.0.0.0/8',
